# project_management_dashboard

./: .bandit.yaml  .clinerules  .cursorrules  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dashboard_Architecture.md  Dashboard_Architeture.md  README.md  SECURITY.md  adblock.md  config.json  config.json.example  coverage.xml  mypy.ini  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-test.txt  requirements.txt  run.py  run_flask.py  run_flask.py.tmp.bak  setup.cfg  setup.py  setup.py.tmp.bak  temp_run.py  temp_run.py.tmp.bak  test-results.xml  wsgi.py  wsgi.py.tmp.bak
.github/workflows/: ci.yml
config/: dashboard.json  dashboard.json.example  influxdb.json  influxdb.json.example  prometheus.json  prometheus.json.example  websocket.json  websocket.json.example
core_scripts/: metrics_collector.py  metrics_collector.py.tmp.bak
dashboard/: __init__.py  __init__.py.tmp.bak  app.py  app.py.tmp.bak  extensions.py  main.py  main.py.tmp.bak  metrics.py  metrics.py.tmp.bak  models.py  models.py.tmp.bak  routes.py  routes.py.tmp.bak  run.py  run.py.tmp.bak  run.sh  stop.sh  utils.py  utils.py.tmp.bak
dashboard/auth/: __init__.py  __init__.py.tmp.bak  middleware.py  middleware.py.tmp.bak  routes.py  routes.py.tmp.bak
dashboard/cache/: metrics.py  metrics.py.tmp.bak
dashboard/config/: __init__.py  __init__.py.tmp.bak  config.py  config.py.tmp.bak  default.py  defaults.py  defaults.py.tmp.bak  schema.py  schema.py.tmp.bak
dashboard/core/: properties.py
dashboard/stubs/: __init__.py  (+4 more)
docs_latest/: conf.py  conf.py.tmp.bak  installation.rst
instance/: dashboard.db
metrics/: config.json  config.json.tmp.bak  dashboard.service  influxdb.log.tmp.bak  monitor.service  monitor_config.json  monitor_config.json.tmp.bak  process_metrics.json  process_metrics.json.tmp.bak  system_metrics.json  system_metrics.json.tmp.bak
reports/: bandit.txt  flake8.txt  pytest_e2e.xml  pytest_integration.xml  pytest_unit.xml  summary.txt  unit_failures.txt
scripts/: create_test_suite.sh  create_update_docs.sh  demo_progress.sh  fix_file_permissions.sh  fix_indentation.py  fix_permissions.sh  generate_hash.py  generate_hash_with_salt.py  github_sync.sh  install_type_stubs.sh  lint_and_test.sh  manage_db.sh  monitor_service.sh  progress_bar.sh  run_dashboard.sh  run_e2e_tests.sh  run_tests.sh  setup.sh  setup_dashboard.sh  setup_dev.sh  setup_env.sh  setup_github.sh  setup_monitor.sh  setup_permissions.sh  setup_test_env.sh  setup_websocket.sh  sync_docs.sh  test.sh  track_implementation.sh  verify_and_fix.sh
src/: Home.py  autoflake.py  get-pip.py  run.py  run_flask.py  temp_run.py  track_implementation.py  track_implementation.py.tmp.bak  wsgi.py
tests/: .env.test  __init__.py  __init__.py.tmp.bak  assertions.py  assertsql.py  config.py  conftest.py  conftest.py.tmp.bak  engines.py  mock.py  provision.py  pytest.ini  schema.py  test_config.yaml  testing.py  util.py
tracking/: implementation_metrics.json
(+495 files in other folders)
